--- a/src/app/pages/authentication/login/login.component.scss
+++ b/src/app/pages/authentication/login/login.component.scss
@@ -4,13 +4,21 @@
   display: block;
   height: 100%;
   width: 100%;
+  background-color: transparent;
+  background-image: linear-gradient(to bottom, white, rgb(72, 72, 72)), url('/assets/img/backgrounds/login-background.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: overlay;
 }
 
 .card {
-  width: 380px;
+  width: 500px;
+  margin-right: 15%;
 
   @include media-xs {
     width: 300px;
+    margin-right: 0;
   }
 
   .header {
@@ -21,6 +29,7 @@
 
 
 .logo {
-  width: 80px;
-  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
